flux/apps/base/monitoring/grafana/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: grafana-route
spec:
  parentRefs:
    - name: istio-gateway
      namespace: istio-system
  hostnames:
    - "grafana.kubegit.com"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: grafana
          port: 80
